Fix a overflow issue on the post title
For the smaller deivce, horizontal scroll was shown due to missing
overflow handling

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -301,6 +301,7 @@
     letter-spacing: -1px;
     line-height: 1.2;
     text-align: center;
+    overflow-wrap: break-word;
 
     @include media-query($on-laptop) {
         font-size: 30px;
